# gazeta-vybor-media-scraper

./: .gitignore  README.md  main.py  pyproject.toml
