[project]
name = "gazetavibor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "playwright (>=1.60.0,<2.0.0)"
]
